Fixed problems with backgrounds when 'always use my colors' is set to true: backgrounds are now transparent instead of inherited. b=57234 r=dbaron, a=buster